plugins {
    id 'application'
    id 'checkstyle'
    id 'jacoco'
}

group = 'app.notesr.cli'
version = '1.0'

repositories {
    mavenCentral()
}

application {
    mainClass = 'app.notesr.cli.App'
    applicationName = 'notesr-cli'
}

checkstyle {
    toolVersion = '10.12.4'
    configFile = rootProject.file('config/checkstyle/checkstyle.xml')
}

tasks.check.dependsOn tasks.checkstyleMain, tasks.checkstyleTest

tasks.build {
    dependsOn 'test'
}

tasks.named('test', Test) {
    useJUnitPlatform()

    maxHeapSize = '1G'

    testLogging {
        events "passed", "skipped", "failed"
    }
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test

    reports {
        xml.required = true
    }
}

compileJava {
    options.release = 21
}

jar {
    manifest {
        attributes(
                'Implementation-Title': 'NoteSR-Cli',
                'Implementation-Version': project.version
        )
    }
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
    implementation 'org.xerial:sqlite-jdbc:3.49.0.0'
    implementation 'net.datafaker:datafaker:2.0.2'
    implementation 'info.picocli:picocli:4.7.5'
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'org.slf4j:slf4j-simple:2.0.9'
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}
